add google analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         repo:  "21croissants/testing-rails-workshop",
         name: "Testing Rails Workshop",
         issues: false,
+        google_analytics: 'UA-32473060-1',
         twitter: [
           "21croissants"
         ]
