new repo location hoping that documentup will stop caching old version

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <script src="documentup.min.js"></script>
     <script>
       DocumentUp.document({
-        repo:  "21croissants/testing-rails-workshop",
-        name: "Testing Rails Workshop",
+        repo:  "21croissants/atelier-testing-rails",
+        name: "Atelier Testing Rails",
         issues: false,
         google_analytics: 'UA-32473060-1',
         twitter: [
